testdata/bad/undefined-named-slotif/index.tw
<p>@component('user')@slotif(true, 'name')@end</p>